data/derived/comb/progs/unify/prog2280.ml.out
Characters 140-143:
  | Sine(e1) -> let ans = sin(pi *. eval(e1,x,y)) in Printf.sprintf "sine is %d " ans
                                                                                  ^^^
Error: This expression has type float but an expression was expected of type
         int
